# sentformer

./: .pre-commit-config.yaml  LICENSE  README.md  discussions.md  pyproject.toml
notebooks/: test-sentence-transformers.ipynb  test.ipynb
sentform/: heads.py  modeling.py  pooling.py  utils.py
