[project]
name = "sentformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pre-commit>=4.1.0",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "transformers>=4.48.1",
]
